Fix crashes running console operations without an active region

Some console operations checked for this but many didn't.

Addresses issues raised in #98491.